cabal-version:          2.4

-- http://haskell.org/cabal/users-guide/

name:                   cardano-db-sync
version:                11.0.0
synopsis:               The Cardano DB Sync node
description:            A Cardano node that follows the Cardano chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md
                        schema/*.sql

custom-setup
  setup-depends:
                        base
                      , Cabal
                      , bytestring
                      , cardano-crypto-class
                      , directory
                      , filepath

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Cardano.DbSync

                        Cardano.DbSync.Era

                        Cardano.DbSync.Era.Byron.Genesis
                        Cardano.DbSync.Era.Byron.Insert
                        Cardano.DbSync.Era.Byron.Util

                        Cardano.DbSync.Era.Cardano.Insert
                        Cardano.DbSync.Era.Cardano.Util

                        Cardano.DbSync.Era.Shelley.Adjust
                        Cardano.DbSync.Era.Shelley.Genesis
                        Cardano.DbSync.Era.Shelley.Generic
                        Cardano.DbSync.Era.Shelley.Generic.Block
                        Cardano.DbSync.Era.Shelley.Generic.Metadata
                        Cardano.DbSync.Era.Shelley.Generic.ParamProposal
                        Cardano.DbSync.Era.Shelley.Generic.Tx
                        Cardano.DbSync.Era.Shelley.Generic.Util
                        Cardano.DbSync.Era.Shelley.Generic.Witness
                        Cardano.DbSync.Era.Shelley.Insert
                        Cardano.DbSync.Era.Shelley.Insert.Epoch
                        Cardano.DbSync.Era.Shelley.Offline
                        Cardano.DbSync.Era.Shelley.Offline.FetchQueue
                        Cardano.DbSync.Era.Shelley.Offline.Http
                        Cardano.DbSync.Era.Shelley.Offline.Query
                        Cardano.DbSync.Era.Shelley.Offline.Types
                        Cardano.DbSync.Era.Shelley.Query
                        Cardano.DbSync.Era.Shelley.Validate

                        Cardano.DbSync.Era.Util

                        Cardano.DbSync.Metrics

                        Cardano.DbSync.Plugin.Default
                        Cardano.DbSync.Plugin.Epoch

                        Cardano.DbSync.Rollback

  build-depends:        base                            >= 4.14         && < 4.16
                      , aeson
                      , binary
                      , bytestring
                      , base16-bytestring
                      , cardano-api
                      , cardano-binary
                      , cardano-crypto
                      , cardano-crypto-class
                      , cardano-crypto-praos
                      , cardano-crypto-wrapper
                      , cardano-db
                      , cardano-sync
                      , cardano-ledger-alonzo
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-ledger-shelley-ma
                      , cardano-prelude
                      , cardano-slotting
                      , containers
                      , esqueleto
                      , extra
                      , groups
                      , http-client
                      , http-client-tls
                      , http-types
                      , iohk-monitoring
                      , io-classes
                      , monad-control
                      , monad-logger
                      , ouroboros-consensus
                      , ouroboros-consensus-byron
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-shelley
                      , ouroboros-network
                      , persistent
                      , persistent-postgresql
                      , prometheus
                      , random-shuffle
                      , small-steps
                      , split
                      , shelley-spec-ledger
                      , strict-containers
                      , swagger2
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , vector

executable cardano-db-sync
  default-language:     Haskell2010
  main-is:              cardano-db-sync.hs
  hs-source-dirs:       gen, app

  ghc-options:          -O2
                        -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -with-rtsopts=-N3

  autogen-modules:      Paths_cardano_db_sync
                        MigrationValidations
  other-modules:        Paths_cardano_db_sync
                        MigrationValidations

  build-depends:        base                            >= 4.14         && < 4.16
                      , cardano-config
                      , cardano-sync
                      , cardano-db-sync
                      , cardano-prelude
                      , cardano-slotting
                      , optparse-applicative
                      , text
