cabal-version:          3.0

name:                   cardano-db-sync
version:                13.1.1.0
synopsis:               The Cardano DB Sync node
description:            A Cardano node that follows the Cardano chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              2020-2023 Input Output Global Inc (IOG).
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md
                        schema/*.sql

custom-setup
  setup-depends:
                        base
                      , Cabal
                      , bytestring
                      , cardano-crypto-class
                      , directory
                      , filepath

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Cardano.DbSync

                        Cardano.DbSync.Api
                        Cardano.DbSync.Config
                        Cardano.DbSync.Config.Alonzo
                        Cardano.DbSync.Config.Byron
                        Cardano.DbSync.Config.Cardano
                        Cardano.DbSync.Config.Node
                        Cardano.DbSync.Config.Shelley
                        Cardano.DbSync.Config.Types
                        Cardano.DbSync.Database
                        Cardano.DbSync.DbAction
                        Cardano.DbSync.Error

                        Cardano.DbSync.Era
                        Cardano.DbSync.Era.Byron.Genesis
                        Cardano.DbSync.Era.Byron.Insert
                        Cardano.DbSync.Era.Byron.Util
                        Cardano.DbSync.Era.Cardano.Insert
                        Cardano.DbSync.Era.Cardano.Util
                        Cardano.DbSync.Era.Shelley.Adjust
                        Cardano.DbSync.Era.Shelley.Generic
                        Cardano.DbSync.Era.Shelley.Generic.Block
                        Cardano.DbSync.Era.Shelley.Generic.EpochUpdate
                        Cardano.DbSync.Era.Shelley.Generic.ProtoParams
                        Cardano.DbSync.Era.Shelley.Generic.Rewards
                        Cardano.DbSync.Era.Shelley.Generic.StakeDist
                        Cardano.DbSync.Era.Shelley.Generic.Metadata
                        Cardano.DbSync.Era.Shelley.Generic.ParamProposal
                        Cardano.DbSync.Era.Shelley.Generic.Tx
                        Cardano.DbSync.Era.Shelley.Generic.Tx.Allegra
                        Cardano.DbSync.Era.Shelley.Generic.Tx.Alonzo
                        Cardano.DbSync.Era.Shelley.Generic.Tx.Babbage
                        Cardano.DbSync.Era.Shelley.Generic.Tx.Mary
                        Cardano.DbSync.Era.Shelley.Generic.Tx.Shelley
                        Cardano.DbSync.Era.Shelley.Generic.Tx.Types
                        Cardano.DbSync.Era.Shelley.Generic.Util
                        Cardano.DbSync.Era.Shelley.Generic.Witness
                        Cardano.DbSync.Era.Shelley.Genesis
                        Cardano.DbSync.Era.Shelley.Insert
                        Cardano.DbSync.Era.Shelley.Insert.Epoch
                        Cardano.DbSync.Era.Shelley.Insert.Grouped
                        Cardano.DbSync.Era.Shelley.Offline
                        Cardano.DbSync.Era.Shelley.Offline.FetchQueue
                        Cardano.DbSync.Era.Shelley.Offline.Http
                        Cardano.DbSync.Era.Shelley.Offline.Query
                        Cardano.DbSync.Era.Shelley.Offline.Types
                        Cardano.DbSync.Era.Shelley.Query
                        Cardano.DbSync.Era.Shelley.Validate

                        -- Temporary debugging validation
                        Cardano.DbSync.Era.Shelley.ValidateWithdrawal

                        Cardano.DbSync.Era.Util

                        Cardano.DbSync.LedgerEvent
                        Cardano.DbSync.LedgerState

                        Cardano.DbSync.Metrics

                        Cardano.DbSync.Cache
                        Cardano.DbSync.Cache.LRU
                        Cardano.DbSync.Default
                        Cardano.DbSync.Epoch

                        Cardano.DbSync.Rollback

                        Cardano.DbSync.Fix.PlutusDataBytes
                        Cardano.DbSync.Fix.PlutusScripts
                        Cardano.DbSync.LocalStateQuery
                        Cardano.DbSync.StateQuery
                        Cardano.DbSync.Sync
                        Cardano.DbSync.Tracing.ToObjectOrphans
                        Cardano.DbSync.Types
                        Cardano.DbSync.Util

                        Paths_cardano_db_sync

  build-depends:        base                            >= 4.14         && < 4.17
                      , aeson
                      , binary
                      , bytestring
                      , base16-bytestring
                      , case-insensitive
                      , cardano-api
                      , cardano-binary
                      , cardano-client
                      , cardano-crypto
                      , cardano-crypto-class
                      , cardano-crypto-wrapper
                      , cardano-data
                      , cardano-db
                      , cardano-ledger-allegra
                      , cardano-ledger-alonzo
                      , cardano-ledger-babbage
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-ledger-conway
                      , cardano-ledger-binary
                      , cardano-ledger-mary
                      , cardano-ledger-shelley
                      , cardano-node
                      , cardano-prelude
                      , cardano-protocol-tpraos
                      , cardano-slotting
                      , cborg
                      , vector-map
                      , containers
                      , contra-tracer
                      , directory
                      , either
                      , esqueleto
                      , extra
                      , filepath
                      , groups
                      , http-client
                      , http-client-tls
                      , http-types
                      , iohk-monitoring
                      , lifted-base
                      , memory
                      , microlens
                      , monad-control
                      , monad-logger
                      , mtl
                      , network-mux
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-diffusion
                      , ouroboros-consensus-protocol
                      , ouroboros-network
                      , ouroboros-network-api
                      , ouroboros-network-framework
                      , ouroboros-network-protocols
                      , persistent
                      , persistent-postgresql
                      , pretty-show
                      , prometheus
                      , psqueues
                      , random-shuffle
                      , small-steps
                      , stm
                      , strict
                      , strict-stm
                      , swagger2
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , typed-protocols
                      , unix
                      , vector
                      , yaml

executable cardano-db-sync
  default-language:     Haskell2010
  main-is:              cardano-db-sync.hs
  hs-source-dirs:       gen, app

  ghc-options:          -O2
                        -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -rtsopts
                        "-with-rtsopts=-A16m -N3 --disable-delayed-os-memory-return"

  autogen-modules:      Paths_cardano_db_sync
                        MigrationValidations
  other-modules:        Paths_cardano_db_sync
                        MigrationValidations

  build-depends:        base                            >= 4.14         && < 4.17
                      , cardano-db
                      , cardano-db-sync
                      , cardano-prelude
                      , cardano-slotting
                      , optparse-applicative
                      , text

executable http-get-json-metadata
  default-language:     Haskell2010
  main-is:              http-get-json-metadata.hs
  hs-source-dirs:       app

  ghc-options:          -O2
                        -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -rtsopts
                        "-with-rtsopts=-A16m -N3 --disable-delayed-os-memory-return"

  build-depends:        base
                      , ansi-terminal
                      , base16-bytestring
                      , bytestring
                      , cardano-db
                      , cardano-db-sync
                      , http-client
                      , http-client-tls
                      , text
                      , transformers
                      , transformers-except

executable test-http-get-json-metadata
  default-language:     Haskell2010
  main-is:              test-http-get-json-metadata.hs
  hs-source-dirs:       app

  ghc-options:          -O2
                        -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -rtsopts
                        "-with-rtsopts=-A16m -N3 --disable-delayed-os-memory-return"

  build-depends:        base
                      , bytestring
                      , cardano-db
                      , cardano-db-sync
                      , esqueleto
                      , extra
                      , http-client
                      , http-client-tls
                      , text
                      , transformers
                      , transformers-except
