cabal-version:          2.2

-- http://haskell.org/cabal/users-guide/

name:                   cardano-db-tool
version:                11.0.0
synopsis:               Utilities to manage the cardano-db-sync databases.
description:            Utilities and executable, used to manage and validate the
                        PostgreSQL db and the ledger database of the cardano-db-sync node
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:		    https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Cardano.Db.Tool

  other-modules:        Cardano.Db.Tool.PrepareSnapshot
                        Cardano.Db.Tool.Report
                        Cardano.Db.Tool.Report.Balance
                        Cardano.Db.Tool.Report.Display
                        Cardano.Db.Tool.Report.StakeReward
                        Cardano.Db.Tool.Report.StakeReward.History
                        Cardano.Db.Tool.Report.StakeReward.Latest
                        Cardano.Db.Tool.Report.Synced
                        Cardano.Db.Tool.Report.Transactions
                        Cardano.Db.Tool.UtxoSet
                        Cardano.Db.Tool.Validation
                        Cardano.Db.Tool.Validate.AdaPots
                        Cardano.Db.Tool.Validate.Balance
                        Cardano.Db.Tool.Validate.BlockProperties
                        Cardano.Db.Tool.Validate.BlockTxs
                        Cardano.Db.Tool.Validate.EpochTable
                        Cardano.Db.Tool.Validate.Ledger
                        Cardano.Db.Tool.Validate.PoolOwner
                        Cardano.Db.Tool.Validate.TotalSupply
                        Cardano.Db.Tool.Validate.TxAccounting
                        Cardano.Db.Tool.Validate.Util
                        Paths_cardano_db_tool

  build-depends:        base                            >= 4.14         && < 4.16
                      , base16-bytestring
                      , bytestring
                      , ansi-terminal
                      , cardano-api
                      , cardano-db
                      , cardano-sync
                      , cardano-ledger-alonzo
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-prelude
                      , cardano-slotting
                      , containers
                      , esqueleto
                      , extra
                      , ouroboros-consensus
                      , ouroboros-consensus-byron
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-shelley
                      , ouroboros-network
                      , persistent
                      , random
                      , shelley-spec-ledger
                      , text
                      , time
                      , transformers
                      , transformers-except

executable cardano-db-tool
  default-language:     Haskell2010
  main-is:              cardano-db-tool.hs
  hs-source-dirs:       app

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  build-depends:        base                            >= 4.14         && < 4.16
                      , cardano-db
                      , cardano-db-tool
                      , cardano-sync
                      , cardano-slotting
                      , optparse-applicative
                      , text
