cabal-version:          2.2

-- http://haskell.org/cabal/users-guide/

name:                   cardano-db-tool
version:                12.0.1
synopsis:               Utilities to manage the cardano-db-sync databases.
description:            Utilities and executable, used to manage and validate the
                        PostgreSQL db and the ledger database of the cardano-db-sync node
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:		    https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Cardano.DbTool

  other-modules:        Cardano.DbTool.PrepareSnapshot
                        Cardano.DbTool.Report
                        Cardano.DbTool.Report.Balance
                        Cardano.DbTool.Report.Display
                        Cardano.DbTool.Report.StakeReward
                        Cardano.DbTool.Report.StakeReward.History
                        Cardano.DbTool.Report.StakeReward.Latest
                        Cardano.DbTool.Report.Synced
                        Cardano.DbTool.Report.Transactions
                        Cardano.DbTool.UtxoSet
                        Cardano.DbTool.Validation
                        Cardano.DbTool.Validate.AdaPots
                        Cardano.DbTool.Validate.Balance
                        Cardano.DbTool.Validate.BlockProperties
                        Cardano.DbTool.Validate.BlockTxs
                        Cardano.DbTool.Validate.EpochTable
                        Cardano.DbTool.Validate.Ledger
                        Cardano.DbTool.Validate.PoolOwner
                        Cardano.DbTool.Validate.TotalSupply
                        Cardano.DbTool.Validate.TxAccounting
                        Cardano.DbTool.Validate.Util
                        Cardano.DbTool.Validate.Withdrawal
                        Paths_cardano_db_tool

  build-depends:        base                            >= 4.14         && < 4.16
                      , base16-bytestring
                      , bytestring
                      , ansi-terminal
                      , cardano-api
                      , cardano-db
                      , cardano-db-sync
                      , cardano-ledger-alonzo
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-prelude
                      , cardano-slotting
                      , vector-map
                      , containers
                      , esqueleto
                      , extra
                      , ouroboros-consensus
                      , ouroboros-consensus-byron
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-shelley
                      , ouroboros-network
                      , persistent
                      , random
                      , random-shuffle
                      , text
                      , time
                      , transformers
                      , transformers-except

executable cardano-db-tool
  default-language:     Haskell2010
  main-is:              cardano-db-tool.hs
  hs-source-dirs:       app

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -threaded
                        -with-rtsopts=-N2

  other-modules:        Paths_cardano_db_tool

  build-depends:        base                            >= 4.14         && < 4.16
                      , cardano-db
                      , cardano-db-sync
                      , cardano-db-tool
                      , cardano-slotting
                      , optparse-applicative
                      , text
                      , transformers-except
